kubernetes/ingress/backend-ingress-backup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"backend-ingress","namespace":"spy-options-bot"},"spec":{"rules":[{"host":"api.spy-options.local","http":{"paths":[{"backend":{"service":{"name":"backend-service","port":{"number":8000}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2026-02-04T10:17:27Z"
  generation: 1
  name: backend-ingress
  namespace: spy-options-bot
  resourceVersion: "1379645"
  uid: f4ba6f35-6e87-45e0-a1b0-2d95d6bbfab7
spec:
  ingressClassName: traefik
  rules:
  - host: api.spy-options.local
    http:
      paths:
      - backend:
          service:
            name: backend-service
            port:
              number: 8000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.134
